# DTSCodingDB

./: .eslintrc.json  .gitignore  .prettierrc  .stylelintrc.json  README.md  app.py  data.db  package-lock.json  package.json  pyproject.toml  query.sql  requirements.txt  test.py  utils.py
.github/workflows/: push.yml
models/: __init__.py  pydantic.py  sqlalchemy.py
static/css/: style.css
static/js/: utils.js
templates/: auth_needed.html  base.html  games.html  home.html  index.html  leaderboard.html  login.html  match.html  new_match.html  register.html  users.html
utils/: __init__.py  auth.py  db_utils.py  dbutils.py  utils.py
