[tool.poetry]
name = "dtscodingdb"
version = "0.1.0"
description = ""
authors = ["CyberFlame <cyberflameu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.103.2" }
sentry-sdk = { extras = ["fastapi"], version = "^1.30.0" }
sqlalchemy = { extras = ["aiosqlite"], version = "^2.0.20" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
