[tool.black]
line-length = 120

[tool.pdm.build]
includes = []
[project]
name = "dtscodingdb"
version = "0.1.0"
description = ""
authors = [
    { name = "CyberFlame", email = "cyberflameu@gmail.com" },
]
dependencies = [
    "fastapi[all]>=0.103.0",
    "sentry-sdk[fastapi]>=1.30.0",
    "sqlalchemy[aiosqlite]>=2.0.20",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
